# trabajo-po-

./: Administracion.cpp  Administracion.h  CMakeLists.txt  CMakePresets.json  CuartoUtil.cpp  CuartoUtil.h  Main.cpp  Propiedad.cpp  Propiedad.h  Propietario.cpp  Propietario.h  README.md  gitignore.txt  po.py
